--- a/GenericIKEA/GenericIKEA.csproj
+++ b/GenericIKEA/GenericIKEA.csproj
@@ -42,8 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AIKeaKit.cs" />
+    <Compile Include="Chair.cs" />
+    <Compile Include="Fnood.cs" />
+    <Compile Include="IParts.cs" />
+    <Compile Include="IToolKit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Snoolma.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
